# python-algorithms

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
__tests__/: test_binary_search.py
algorithms/: binary_search.py
