[tool.poetry]
name = "python-algorithms"
version = "0.1.0"
description = "grokking algorithms book's algorithms"
authors = ["Jose Wenzel <devwenzel@gmail.com>"]
readme = "README.md"
packages = [{include = "python_algorithms"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
