[tool.poetry]
name = "python-algorithms"
version = "0.1.0"
description = "grokking algorithms book's algorithms"
authors = ["Jose Wenzel <devwenzel@gmail.com>"]
readme = "README.md"
packages = [
    { include = "algorithms" },
    { include = "__tests__" }
]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
